--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,15 @@
     "start": "node ."
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "knex": "^3.1.0",
+    "morgan": "~1.9.1",
+    "mysql2": "^3.11.0",
+    "objection": "^3.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
