--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-rate-limit": "^7.4.0",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.11.0",
