--- a/server/package.json
+++ b/server/package.json
@@ -15,14 +15,18 @@
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
     "knex": "^3.1.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.11.0",
-    "objection": "^3.1.4"
+    "objection": "^3.1.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^15.12.5",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.0.0",
     "typescript": "^4.3.4"
